Lab Solved by Santi Semprun

--- a/lab-dw-data-cleaning-and-formatting.ipynb
+++ b/lab-dw-data-cleaning-and-formatting.ipynb
@@ -57,14 +57,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "5810735c-8056-4442-bbf2-dda38d3e284a",
-      "metadata": {
-        "id": "5810735c-8056-4442-bbf2-dda38d3e284a"
-      },
+      "execution_count": 8,
+      "id": "5df09dd2",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your code here"
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "id": "0baa0c1d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.columns = [col.lower().replace(' ','_') if col != 'ST' else 'state' for col in df.columns ]"
       ]
     },
     {
@@ -98,6 +108,49 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "id": "25199219",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([nan, 'F', 'M', 'Femal', 'Male', 'female'], dtype=object)"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['gender'].unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "id": "8db29fe9",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['Washington', 'Arizona', 'Nevada', 'California', 'Oregon', 'Cali',\n",
+              "       'AZ', 'WA', nan], dtype=object)"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['state'].unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "3f8ee5cb-50ab-48af-8a9f-9a389804033c",
       "metadata": {
@@ -105,7 +158,120 @@
       },
       "outputs": [],
       "source": [
-        "# Your code here"
+        "\n",
+        "def clean_inconsistent_gender_values(value):\n",
+        "    val = str(value)\n",
+        "    if len(val) >= 1:\n",
+        "        if val.startswith('f') or val.startswith('F'):\n",
+        "            correct_value = \"F\"\n",
+        "            return correct_value\n",
+        "        elif val.startswith('m') or val.startswith('M'):\n",
+        "            correct_value = \"M\"\n",
+        "            return correct_value\n",
+        "        else:\n",
+        "            return 'NULL'\n",
+        "\n",
+        "        \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "fff9af66",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['gender'] = df['gender'].apply(clean_inconsistent_gender_values)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "id": "9f3bb622",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def clean_inconsistent_state_values(value):\n",
+        "    val = str(value)\n",
+        "    if len(val) == 2:\n",
+        "        if val == 'AZ':\n",
+        "            correct_value = \"Arizona\"\n",
+        "            return correct_value\n",
+        "        elif val == 'WA':\n",
+        "            correct_value = \"Washington\"\n",
+        "            return correct_value\n",
+        "        else:\n",
+        "            return val\n",
+        "    elif len(val) > 2 and len(val) < 5:\n",
+        "        if val == 'Cali':\n",
+        "            correct_value = 'California'\n",
+        "        else:\n",
+        "            return 'NULL'\n",
+        "    else:\n",
+        "        return val\n",
+        "    \n",
+        "df['state'] = df['state'].apply(clean_inconsistent_state_values)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "id": "75104f1c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def clean_education(value):\n",
+        "    val = str(value)\n",
+        "    if val == 'Bachelors':\n",
+        "        return 'Bachelor'\n",
+        "    else:\n",
+        "        return val\n",
+        "    \n",
+        "df['education'] = df['education'].apply(clean_education)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "id": "166a6b2a",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([nan, '697953.59%', '1288743.17%', ..., '2031499.76%', '323912.47%',\n",
+              "       '899704.02%'], dtype=object)"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['customer_lifetime_value'].unique()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "id": "0e0aef65",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def clean_customer_lifetime_vale(value):\n",
+        "    val = str(value)\n",
+        "    if val[-1] == '%':\n",
+        "        val = val.replace('%','')\n",
+        "        return float(val)\n",
+        "    else:\n",
+        "        try:\n",
+        "            return float(val)\n",
+        "        except:\n",
+        "            return 0\n",
+        "    \n",
+        "df['customer_lifetime_value'] = df['customer_lifetime_value'].apply(clean_customer_lifetime_vale)"
       ]
     },
     {
@@ -152,14 +318,115 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "eb8f5991-73e9-405f-bf1c-6b7c589379a9",
       "metadata": {
         "id": "eb8f5991-73e9-405f-bf1c-6b7c589379a9"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['1/0/00', '1/2/00', '1/1/00', '1/3/00', '1/5/00', '1/4/00', nan],\n",
+              "      dtype=object)"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.dtypes\n",
+        "df['number_of_open_complaints'].unique()\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "id": "32831938",
+      "metadata": {},
       "outputs": [],
       "source": [
-        "# Your code here"
+        "def clean_complaints(value):\n",
+        "    val = str(value).split('/')\n",
+        "    if len(val) > 1:\n",
+        "        try: \n",
+        "            res = int(val[1])\n",
+        "            return res\n",
+        "        except:\n",
+        "            print(f'{val} not valid int')\n",
+        "    else:\n",
+        "        try:\n",
+        "            res = int(val[0])\n",
+        "            return res\n",
+        "        except:\n",
+        "            return None\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "id": "3f2efcdc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['number_of_open_complaints'] = df['number_of_open_complaints'].apply(clean_complaints).astype('Int64')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "id": "01de6f67",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "customer                      object\n",
+              "state                         object\n",
+              "gender                        object\n",
+              "education                     object\n",
+              "customer_lifetime_value      float64\n",
+              "income                       float64\n",
+              "monthly_premium_auto         float64\n",
+              "number_of_open_complaints      Int64\n",
+              "policy_type                   object\n",
+              "vehicle_class                 object\n",
+              "total_claim_amount           float64\n",
+              "dtype: object"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.dtypes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "id": "d03ab820",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2936"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.duplicated().sum()"
       ]
     },
     {
@@ -199,14 +466,142 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
+      "id": "451423fa",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "customer                     2937\n",
+              "state                         120\n",
+              "gender                          0\n",
+              "education                       0\n",
+              "customer_lifetime_value      2940\n",
+              "income                       2937\n",
+              "monthly_premium_auto         2937\n",
+              "number_of_open_complaints    2937\n",
+              "policy_type                  2937\n",
+              "vehicle_class                2937\n",
+              "total_claim_amount           2937\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "id": "f184fc35-7831-4836-a0a5-e7f99e01b40e",
       "metadata": {
         "id": "f184fc35-7831-4836-a0a5-e7f99e01b40e"
       },
       "outputs": [],
       "source": [
-        "# Your code here"
+        "df.dropna(subset=['customer', 'customer_lifetime_value', 'income', 'monthly_premium_auto', 'policy_type', 'vehicle_class', 'total_claim_amount'], thresh=3, inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "id": "ec6f2665",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "customer                       0\n",
+              "state                        120\n",
+              "gender                         0\n",
+              "education                      0\n",
+              "customer_lifetime_value        3\n",
+              "income                         0\n",
+              "monthly_premium_auto           0\n",
+              "number_of_open_complaints      0\n",
+              "policy_type                    0\n",
+              "vehicle_class                  0\n",
+              "total_claim_amount             0\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "id": "258ca134",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0       7.936903e+05\n",
+              "1       6.979536e+05\n",
+              "2       1.288743e+06\n",
+              "3       7.645862e+05\n",
+              "4       5.363077e+05\n",
+              "            ...     \n",
+              "1066    3.059550e+05\n",
+              "1067    2.031500e+06\n",
+              "1068    3.239125e+05\n",
+              "1069    4.626801e+05\n",
+              "1070    8.997040e+05\n",
+              "Name: customer_lifetime_value, Length: 1071, dtype: float64"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['customer_lifetime_value'].fillna(df['customer_lifetime_value'].mean())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "id": "b0155930",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0       Washington\n",
+              "1          Arizona\n",
+              "2           Nevada\n",
+              "3       California\n",
+              "4       Washington\n",
+              "           ...    \n",
+              "1066        Oregon\n",
+              "1067          NULL\n",
+              "1068       Arizona\n",
+              "1069    California\n",
+              "1070    California\n",
+              "Name: state, Length: 1071, dtype: object"
+            ]
+          },
+          "execution_count": 34,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['state'].fillna('NULL')"
       ]
     },
     {
@@ -248,14 +643,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "1929362c-47ed-47cb-baca-358b78d401a0",
       "metadata": {
         "id": "1929362c-47ed-47cb-baca-358b78d401a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# Your code here"
+        "df.duplicated().sum()"
       ]
     },
     {
@@ -306,8 +712,8 @@
       "cell_type": "markdown",
       "id": "80f846bb-3f5e-4ca2-96c0-900728daca5a",
       "metadata": {
-        "tags": [],
-        "id": "80f846bb-3f5e-4ca2-96c0-900728daca5a"
+        "id": "80f846bb-3f5e-4ca2-96c0-900728daca5a",
+        "tags": []
       },
       "source": [
         "# Bonus: Challenge 3: Analyzing Clean and Formated Data"
@@ -345,8 +751,11 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -360,10 +769,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
-    },
-    "colab": {
-      "provenance": []
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
